Adding custom blueprints, snippets and templates
(Although CSS for these is not yet updated)

--- a/site/blueprints/home.yml
+++ b/site/blueprints/home.yml
@@ -1,16 +1,9 @@
 title: Home
 
-pages: false
+pages: true
 
 fields:
   title:
     label: Title
     type:  text
-
-  intro:
-    label: Intro
-    type:  textarea
-
-  text:
-    label: Text
-    type:  textarea
+    width: 5
