--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "site/fields/builder"]
 	path = site/fields/builder
 	url = https://github.com/TimOetting/kirby-builder.git
+[submodule "site/fields/gallerygrid"]
+	path = site/fields/gallerygrid
+	url = https://github.com/fabianmichael/kirby-imagekit.git
+[submodule "site/fields/markdown"]
+	path = site/fields/markdown
+	url = https://github.com/JonasDoebertin/kirby-visual-markdown.git
