Created new custom Builder class
In order to get drag & drop in panel without messing up original
Builder code. Visually panel looks ok.

Errors: +items button doesn't work.

--- a/site/blueprints/project.yml
+++ b/site/blueprints/project.yml
@@ -25,7 +25,7 @@ fields:
     type: gallerygrid
   builder:
     label: Items
-    type: builder
+    type: customBuilder
     sortable: false
     fieldsets:
       bodytext:
