Replacing Builder plugin with custom builder mod
Very hackish, but draggable builder items are functional.

--- a/site/blueprints/project.yml
+++ b/site/blueprints/project.yml
@@ -23,9 +23,9 @@ fields:
     type: line
   gallerygrid:
     type: gallerygrid
-  builder:
+  custombuilder:
     label: Items
-    type: customBuilder
+    type: custombuilder
     sortable: false
     fieldsets:
       bodytext:
