--- a/assets/package.json
+++ b/assets/package.json
@@ -4,7 +4,8 @@
   "description": "A collection of tools to build the Curtistan website. ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "./node_modules/.bin/webpack-dev-server --config ./webpack.dev.js"
   },
   "author": "",
   "license": "ISC",
