--- a/assets/package.json
+++ b/assets/package.json
@@ -1,30 +1,38 @@
 {
-  "name": "curtistan-front-end-assets",
-  "version": "0.0.1",
-  "description": "A collection of tools to build the Curtistan website. ",
+  "name": "assets",
+  "version": "1.0.0",
+  "description": "run from this directory with: $ sass --watch ./scss:./css && pug scss --basedir $(pwd)  --out styleguide $ pug scss --out styleguide $ serve",
   "main": "index.js",
+  "local-web-server": {
+    "port": 8000
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "./node_modules/.bin/webpack-dev-server --config ./webpack.dev.js"
+    "babel": "babel scripts/src/index.js --watch --out-file scripts/dist/index.js ",
+    "pug": "pug --pretty --basedir '.' --watch ./scss/ --out ./styleguide/ ",
+    "scss": "sass --watch ./scss:./css",
+    "livereload": "node livereload.js",
+    "server": "./node_modules/.bin/ws",
+    "rollup": "./node_modules/.bin/rollup -c -w",
+    "start": "npm-run-all --parallel server livereload rollup pug scss"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
+    "babel-cli": "^6.24.1",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
-    "css-loader": "^0.28.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "html-loader": "^0.4.5",
-    "html-webpack-plugin": "^2.28.0",
-    "node-sass": "^4.5.2",
-    "pug": "^2.0.0-rc.1",
-    "pug-html-loader": "^1.1.4",
-    "pug-loader": "^2.3.0",
-    "sass-loader": "^6.0.3",
-    "style-loader": "^0.17.0",
-    "waypoints": "^4.0.1",
-    "webpack": "^2.5.0",
-    "webpack-dev-server": "^2.4.5"
+    "babel-preset-latest": "^6.24.1",
+    "livereload": "^0.6.2",
+    "node-sass": "^4.5.3",
+    "npm-run-all": "^4.0.2",
+    "rollup": "^0.41.6",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-watch": "^3.2.2"
+  },
+  "dependencies": {
+    "jquery": "^3.2.1",
+    "waypoints": "^4.0.1"
   }
 }
